--- a/META.yml
+++ b/META.yml
@@ -17,7 +17,8 @@ no_index:
     - inc
     - t
 requires:
+  Math::Complex: 1.54
   Moose: 0.54
   MooseX::AttributeHelpers: 0.12
   MooseX::Clone: 0.03
-version: 0.06
+version: 0.07
