--- a/META.yml
+++ b/META.yml
@@ -17,8 +17,10 @@ no_index:
     - inc
     - t
 requires:
+  Check::ISA: 0.04
   Math::Complex: 1.54
-  Moose: 0.54
-  MooseX::AttributeHelpers: 0.12
+  Moose: 0.57
+  MooseX::AttributeHelpers: 0.13
   MooseX::Clone: 0.03
-version: 0.09
+  MooseX::Storage: 0.14
+version: 0.10
