--- a/META.yml
+++ b/META.yml
@@ -3,13 +3,16 @@ abstract: 'Primitive Geometry Entities'
 author:
   - 'Cory Watson <gphat@cpan.org>'
 build_requires:
+  ExtUtils::MakeMaker: 6.42
   Test::More: 0
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.75'
+generated_by: 'Module::Install version 0.88'
 license: perl
 meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.3.html
-  version: 1.3
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
 name: Geometry-Primitive
 no_index:
   directory:
@@ -22,4 +25,6 @@ requires:
   MooseX::AttributeHelpers: 0.13
   MooseX::Clone: 0.03
   MooseX::Storage: 0.14
-version: 0.13
+resources:
+  license: http://dev.perl.org/licenses/
+version: 0.14
