--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,17 @@
 ---
 abstract: 'Primitive Geometry Entities'
 author:
+  - 'Cory Watson, C<< <gphat@cpan.org> >>'
   - 'Cory Watson <gphat@cpan.org>'
 build_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.36
   JSON::Any: 1.22
   Test::More: 0
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.36
 distribution_type: module
-generated_by: 'Module::Install version 0.91'
+dynamic_config: 1
+generated_by: 'Module::Install version 1.06'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -27,4 +29,4 @@ requires:
   MooseX::Storage: 0.23
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.22
+version: 0.23
